Migrate JSON2NBT to LinBus tree API and fix downstream type mismatches
JSON2NBT now parses directly into org.enginehub.linbus.tree types instead
of the deprecated com.sk89q.jnbt wrappers. getTagFromJson returns
LinCompoundTag to match its actual runtime type and to match how callers
already consume NBT elsewhere in the codebase. Also modernized the parser
internals (ArrayDeque instead of Stack, char literals instead of magic
numbers, iterative escape-detection instead of recursive, dropped Guava).

BlanketBaseBlock gained a LinCompoundTag constructor (the old CompoundTag
one is now deprecated but kept for compatibility) since DefaultBlockParser
now threads a LinCompoundTag through parseLogic after switching off the
deprecated getNbtData()/CompoundTag accessors.