@@ -1,26 +1,26 @@
 package com.fastasyncworldedit.core.jnbt;
 
-import com.google.common.base.Splitter;
-import com.google.common.collect.Iterables;
-import com.google.common.collect.Lists;
-import com.sk89q.jnbt.ByteTag;
-import com.sk89q.jnbt.CompoundTag;
-import com.sk89q.jnbt.DoubleTag;
-import com.sk89q.jnbt.FloatTag;
-import com.sk89q.jnbt.IntArrayTag;
-import com.sk89q.jnbt.IntTag;
-import com.sk89q.jnbt.ListTag;
-import com.sk89q.jnbt.LongTag;
-import com.sk89q.jnbt.ShortTag;
-import com.sk89q.jnbt.StringTag;
-import com.sk89q.jnbt.Tag;
+import org.enginehub.linbus.tree.LinByteTag;
+import org.enginehub.linbus.tree.LinCompoundTag;
+import org.enginehub.linbus.tree.LinDoubleTag;
+import org.enginehub.linbus.tree.LinFloatTag;
+import org.enginehub.linbus.tree.LinIntArrayTag;
+import org.enginehub.linbus.tree.LinIntTag;
+import org.enginehub.linbus.tree.LinListTag;
+import org.enginehub.linbus.tree.LinLongTag;
+import org.enginehub.linbus.tree.LinShortTag;
+import org.enginehub.linbus.tree.LinStringTag;
+import org.enginehub.linbus.tree.LinTag;
+import org.enginehub.linbus.tree.LinTagType;
 
+import java.util.ArrayDeque;
 import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.Stack;
+import java.util.Arrays;
+import java.util.Deque;
+import java.util.LinkedHashMap;
+import java.util.Map;
 import java.util.regex.Pattern;
 
-@SuppressWarnings({"unchecked", "rawtypes"})
 public class JSON2NBT {
 
     private static final Pattern INT_ARRAY_MATCHER = Pattern.compile("\\[[-+\\d|,\\s]+\\]");
@@ -28,44 +28,47 @@ public class JSON2NBT {
     private JSON2NBT() {
     }
 
-    public static CompoundTag getTagFromJson(String jsonString) throws NBTException {
+    public static LinCompoundTag getTagFromJson(String jsonString) throws NBTException {
+        if (jsonString == null) {
+            throw new NBTException("jsonString must not be null");
+        }
         jsonString = jsonString.trim();
         if (!jsonString.startsWith("{")) {
             throw new NBTException("Invalid tag encountered, expected '{' as first char.");
         } else if (topTagsCount(jsonString) != 1) {
             throw new NBTException("Encountered multiple top tags, only one expected");
         } else {
-            return (CompoundTag) nameValueToNBT("tag", jsonString).parse();
+            return (LinCompoundTag) nameValueToNBT("tag", jsonString).parse();
         }
     }
 
     public static int topTagsCount(String str) throws NBTException {
-        int i = 0;
-        boolean flag = false;
-        Stack stack = new Stack();
+        int count = 0;
+        boolean inQuotes = false;
+        Deque<Character> stack = new ArrayDeque<>();
 
         for (int j = 0; j < str.length(); ++j) {
             char c0 = str.charAt(j);
-            if (c0 == 34) {
+            if (c0 == '"') {
                 if (isCharEscaped(str, j)) {
-                    if (!flag) {
+                    if (!inQuotes) {
                         throw new NBTException("Illegal use of \\\": " + str);
                     }
                 } else {
-                    flag = !flag;
+                    inQuotes = !inQuotes;
                 }
-            } else if (!flag) {
-                if (c0 != 123 && c0 != 91) {
-                    if (c0 == 125 && (stack.isEmpty() || (Character) stack.pop() != 123)) {
+            } else if (!inQuotes) {
+                if (c0 != '{' && c0 != '[') {
+                    if (c0 == '}' && (stack.isEmpty() || stack.pop() != '{')) {
                         throw new NBTException("Unbalanced curly brackets {}: " + str);
                     }
 
-                    if (c0 == 93 && (stack.isEmpty() || (Character) stack.pop() != 91)) {
+                    if (c0 == ']' && (stack.isEmpty() || stack.pop() != '[')) {
                         throw new NBTException("Unbalanced square brackets []: " + str);
                     }
                 } else {
                     if (stack.isEmpty()) {
-                        ++i;
+                        ++count;
                     }
 
                     stack.push(c0);
@@ -73,35 +76,35 @@ public class JSON2NBT {
             }
         }
 
-        if (flag) {
+        if (inQuotes) {
             throw new NBTException("Unbalanced quotation: " + str);
         } else if (!stack.isEmpty()) {
             throw new NBTException("Unbalanced brackets: " + str);
         } else {
-            if (i == 0 && !str.isEmpty()) {
-                i = 1;
+            if (count == 0 && !str.isEmpty()) {
+                count = 1;
             }
 
-            return i;
+            return count;
         }
     }
 
-    private static JSON2NBT.Any joinStrToNBT(String... args) throws NBTException {
+    private static Any joinStrToNBT(String... args) throws NBTException {
         return nameValueToNBT(args[0], args[1]);
     }
 
-    private static JSON2NBT.Any nameValueToNBT(String key, String value) throws NBTException {
+    private static Any nameValueToNBT(String key, String value) throws NBTException {
         value = value.trim();
         String s;
         char c01;
         if (value.startsWith("{")) {
             value = value.substring(1, value.length() - 1);
 
-            JSON2NBT.Compound JSON2NBT$list1;
-            for (JSON2NBT$list1 = new JSON2NBT.Compound(key); value.length() > 0; value = value.substring(s.length() + 1)) {
+            Compound compound;
+            for (compound = new Compound(key); !value.isEmpty(); value = value.substring(s.length() + 1)) {
                 s = nextNameValuePair(value, true);
-                if (s.length() > 0) {
-                    JSON2NBT$list1.tagList.add(getTagFromNameValue(s, false));
+                if (!s.isEmpty()) {
+                    compound.tagList.add(getTagFromNameValue(s, false));
                 }
 
                 if (value.length() < s.length() + 1) {
@@ -109,20 +112,20 @@ public class JSON2NBT {
                 }
 
                 c01 = value.charAt(s.length());
-                if (c01 != 44 && c01 != 123 && c01 != 125 && c01 != 91 && c01 != 93) {
+                if (c01 != ',' && c01 != '{' && c01 != '}' && c01 != '[' && c01 != ']') {
                     throw new NBTException("Unexpected token '" + c01 + "' at: " + value.substring(s.length()));
                 }
             }
 
-            return JSON2NBT$list1;
+            return compound;
         } else if (value.startsWith("[") && !INT_ARRAY_MATCHER.matcher(value).matches()) {
             value = value.substring(1, value.length() - 1);
 
-            JSON2NBT.List JSON2NBT$list;
-            for (JSON2NBT$list = new JSON2NBT.List(key); value.length() > 0; value = value.substring(s.length() + 1)) {
+            JSON2NBT.List list;
+            for (list = new JSON2NBT.List(key); !value.isEmpty(); value = value.substring(s.length() + 1)) {
                 s = nextNameValuePair(value, false);
-                if (s.length() > 0) {
-                    JSON2NBT$list.tagList.add(getTagFromNameValue(s, true));
+                if (!s.isEmpty()) {
+                    list.tagList.add(getTagFromNameValue(s, true));
                 }
 
                 if (value.length() < s.length() + 1) {
@@ -130,89 +133,89 @@ public class JSON2NBT {
                 }
 
                 c01 = value.charAt(s.length());
-                if (c01 != 44 && c01 != 123 && c01 != 125 && c01 != 91 && c01 != 93) {
+                if (c01 != ',' && c01 != '{' && c01 != '}' && c01 != '[' && c01 != ']') {
                     throw new NBTException("Unexpected token '" + c01 + "' at: " + value.substring(s.length()));
                 }
             }
 
-            return JSON2NBT$list;
+            return list;
         } else {
-            return new JSON2NBT.Primitive(key, value);
+            return new Primitive(key, value);
         }
     }
 
-    private static JSON2NBT.Any getTagFromNameValue(String str, boolean isArray) throws NBTException {
-        String s = locateName(str, isArray);
-        String s1 = locateValue(str, isArray);
-        return joinStrToNBT(s, s1);
+    private static Any getTagFromNameValue(String str, boolean isArray) throws NBTException {
+        String name = locateName(str, isArray);
+        String value = locateValue(str, isArray);
+        return joinStrToNBT(name, value);
     }
 
     private static String nextNameValuePair(String str, boolean isCompound) throws NBTException {
-        int i = getNextCharIndex(str, ':');
-        int j = getNextCharIndex(str, ',');
+        int colonIndex = getNextCharIndex(str, ':');
+        int commaIndex = getNextCharIndex(str, ',');
         if (isCompound) {
-            if (i == -1) {
+            if (colonIndex == -1) {
                 throw new NBTException("Unable to locate name/value separator for string: " + str);
             }
 
-            if (j != -1 && j < i) {
+            if (commaIndex != -1 && commaIndex < colonIndex) {
                 throw new NBTException("Name error at: " + str);
             }
-        } else if (i == -1 || i > j) {
-            i = -1;
+        } else if (colonIndex == -1 || colonIndex > commaIndex) {
+            colonIndex = -1;
         }
 
-        return locateValueAt(str, i);
+        return locateValueAt(str, colonIndex);
     }
 
     private static String locateValueAt(String str, int index) throws NBTException {
-        Stack stack = new Stack();
+        Deque<Character> stack = new ArrayDeque<>();
         int i = index + 1;
-        boolean flag = false;
-        boolean flag1 = false;
-        boolean flag2 = false;
+        boolean inQuotes = false;
+        boolean sawQuotedValue = false;
+        boolean sawNonWhitespace = false;
 
-        for (int j = 0; i < str.length(); ++i) {
+        for (int quoteEnd = 0; i < str.length(); ++i) {
             char c0 = str.charAt(i);
-            if (c0 == 34) {
+            if (c0 == '"') {
                 if (isCharEscaped(str, i)) {
-                    if (!flag) {
+                    if (!inQuotes) {
                         throw new NBTException("Illegal use of \\\": " + str);
                     }
                 } else {
-                    flag = !flag;
-                    if (flag && !flag2) {
-                        flag1 = true;
+                    inQuotes = !inQuotes;
+                    if (inQuotes && !sawNonWhitespace) {
+                        sawQuotedValue = true;
                     }
 
-                    if (!flag) {
-                        j = i;
+                    if (!inQuotes) {
+                        quoteEnd = i;
                     }
                 }
-            } else if (!flag) {
-                if (c0 != 123 && c0 != 91) {
-                    if (c0 == 125 && (stack.isEmpty() || ((Character) stack.pop()).charValue() != 123)) {
+            } else if (!inQuotes) {
+                if (c0 != '{' && c0 != '[') {
+                    if (c0 == '}' && (stack.isEmpty() || stack.pop() != '{')) {
                         throw new NBTException("Unbalanced curly brackets {}: " + str);
                     }
 
-                    if (c0 == 93 && (stack.isEmpty() || ((Character) stack.pop()).charValue() != 91)) {
+                    if (c0 == ']' && (stack.isEmpty() || stack.pop() != '[')) {
                         throw new NBTException("Unbalanced square brackets []: " + str);
                     }
 
-                    if (c0 == 44 && stack.isEmpty()) {
+                    if (c0 == ',' && stack.isEmpty()) {
                         return str.substring(0, i);
                     }
                 } else {
-                    stack.push(Character.valueOf(c0));
+                    stack.push(c0);
                 }
             }
 
             if (!Character.isWhitespace(c0)) {
-                if (!flag && flag1 && j != i) {
-                    return str.substring(0, j + 1);
+                if (!inQuotes && sawQuotedValue && quoteEnd != i) {
+                    return str.substring(0, quoteEnd + 1);
                 }
 
-                flag2 = true;
+                sawNonWhitespace = true;
             }
         }
 
@@ -260,20 +263,20 @@ public class JSON2NBT {
     }
 
     private static int getNextCharIndex(String str, char targetChar) {
-        int i = 0;
+        boolean outsideQuotes = true;
 
-        for (boolean flag = true; i < str.length(); ++i) {
+        for (int i = 0; i < str.length(); ++i) {
             char c0 = str.charAt(i);
-            if (c0 == 34) {
+            if (c0 == '"') {
                 if (!isCharEscaped(str, i)) {
-                    flag = !flag;
+                    outsideQuotes = !outsideQuotes;
                 }
-            } else if (flag) {
+            } else if (outsideQuotes) {
                 if (c0 == targetChar) {
                     return i;
                 }
 
-                if (c0 == 123 || c0 == 91) {
+                if (c0 == '{' || c0 == '[') {
                     return -1;
                 }
             }
@@ -283,10 +286,14 @@ public class JSON2NBT {
     }
 
     private static boolean isCharEscaped(String str, int index) {
-        return index > 0 && str.charAt(index - 1) == 92 && !isCharEscaped(str, index - 1);
+        int backslashes = 0;
+        while (index - 1 - backslashes >= 0 && str.charAt(index - 1 - backslashes) == '\\') {
+            ++backslashes;
+        }
+        return (backslashes & 1) == 1;
     }
 
-    private static class Primitive extends JSON2NBT.Any {
+    private static class Primitive extends Any {
 
         private static final Pattern DOUBLE = Pattern.compile("[-+]?[0-9]*\\.?[0-9]+[d|D]");
         private static final Pattern FLOAT = Pattern.compile("[-+]?[0-9]*\\.?[0-9]+[f|F]");
@@ -295,126 +302,136 @@ public class JSON2NBT {
         private static final Pattern SHORT = Pattern.compile("[-+]?[0-9]+[s|S]");
         private static final Pattern INTEGER = Pattern.compile("[-+]?[0-9]+");
         private static final Pattern DOUBLE_UNTYPED = Pattern.compile("[-+]?[0-9]*\\.?[0-9]+");
-        private static final Splitter SPLITTER = Splitter.on(',').omitEmptyStrings();
+
         protected String jsonValue;
 
-        public Primitive(String jsonIn, String valueIn) {
+        Primitive(String jsonIn, String valueIn) {
             this.json = jsonIn;
             this.jsonValue = valueIn;
         }
 
-        public Tag parse() throws NBTException {
+        @Override
+        public LinTag<?> parse() throws NBTException {
             try {
                 if (DOUBLE.matcher(this.jsonValue).matches()) {
-                    return new DoubleTag(Double.parseDouble(this.jsonValue.substring(0, this.jsonValue.length() - 1)));
+                    return LinDoubleTag.of(Double.parseDouble(this.jsonValue.substring(0, this.jsonValue.length() - 1)));
                 }
 
                 if (FLOAT.matcher(this.jsonValue).matches()) {
-                    return new FloatTag(Float.parseFloat(this.jsonValue.substring(0, this.jsonValue.length() - 1)));
+                    return LinFloatTag.of(Float.parseFloat(this.jsonValue.substring(0, this.jsonValue.length() - 1)));
                 }
 
                 if (BYTE.matcher(this.jsonValue).matches()) {
-                    return new ByteTag(Byte.parseByte(this.jsonValue.substring(0, this.jsonValue.length() - 1)));
+                    return LinByteTag.of(Byte.parseByte(this.jsonValue.substring(0, this.jsonValue.length() - 1)));
                 }
 
                 if (LONG.matcher(this.jsonValue).matches()) {
-                    return new LongTag(Long.parseLong(this.jsonValue.substring(0, this.jsonValue.length() - 1)));
+                    return LinLongTag.of(Long.parseLong(this.jsonValue.substring(0, this.jsonValue.length() - 1)));
                 }
 
                 if (SHORT.matcher(this.jsonValue).matches()) {
-                    return new ShortTag(Short.parseShort(this.jsonValue.substring(0, this.jsonValue.length() - 1)));
+                    return LinShortTag.of(Short.parseShort(this.jsonValue.substring(0, this.jsonValue.length() - 1)));
                 }
 
                 if (INTEGER.matcher(this.jsonValue).matches()) {
-                    return new IntTag(Integer.parseInt(this.jsonValue));
+                    return LinIntTag.of(Integer.parseInt(this.jsonValue));
                 }
 
                 if (DOUBLE_UNTYPED.matcher(this.jsonValue).matches()) {
-                    return new DoubleTag(Double.parseDouble(this.jsonValue));
+                    return LinDoubleTag.of(Double.parseDouble(this.jsonValue));
                 }
 
-                if ("true".equalsIgnoreCase(this.jsonValue) || "false".equalsIgnoreCase(this.jsonValue)) {
-                    return new ByteTag((byte) (Boolean.parseBoolean(this.jsonValue) ? 1 : 0));
+                if ("true".equalsIgnoreCase(this.jsonValue)) {
+                    return LinByteTag.of((byte)1);
                 }
-            } catch (NumberFormatException var6) {
-                this.jsonValue = this.jsonValue.replaceAll("\\\\\"", "\"");
-                return new StringTag(this.jsonValue);
+
+                if ("false".equalsIgnoreCase(this.jsonValue)) {
+                    return LinByteTag.of((byte)0);
+                }
+            } catch (NumberFormatException e) {
+                this.jsonValue = this.jsonValue.replace("\\\"", "\"");
+                return LinStringTag.of(this.jsonValue);
             }
 
             if (this.jsonValue.startsWith("[") && this.jsonValue.endsWith("]")) {
-                String var7 = this.jsonValue.substring(1, this.jsonValue.length() - 1);
-                String[] var8 = Iterables.toArray(SPLITTER.split(var7), String.class);
+                String inner = this.jsonValue.substring(1, this.jsonValue.length() - 1);
+                String[] parts = Arrays.stream(inner.split(",", -1))
+                        .filter(part -> !part.isEmpty())
+                        .toArray(String[]::new);
 
                 try {
-                    int[] var5 = new int[var8.length];
+                    int[] values = new int[parts.length];
 
-                    for (int j = 0; j < var8.length; ++j) {
-                        var5[j] = Integer.parseInt(var8[j].trim());
+                    for (int j = 0; j < parts.length; ++j) {
+                        values[j] = Integer.parseInt(parts[j].trim());
                     }
 
-                    return new IntArrayTag(var5);
-                } catch (NumberFormatException var51) {
-                    return new StringTag(this.jsonValue);
+                    return LinIntArrayTag.of(values);
+                } catch (NumberFormatException e) {
+                    return LinStringTag.of(this.jsonValue);
                 }
             } else {
                 if (this.jsonValue.startsWith("\"") && this.jsonValue.endsWith("\"")) {
                     this.jsonValue = this.jsonValue.substring(1, this.jsonValue.length() - 1);
                 }
 
-                this.jsonValue = this.jsonValue.replaceAll("\\\\\"", "\"");
-                StringBuilder stringbuilder = new StringBuilder();
+                this.jsonValue = this.jsonValue.replace("\\\"", "\"");
+                StringBuilder stringBuilder = new StringBuilder();
 
                 for (int i = 0; i < this.jsonValue.length(); ++i) {
-                    if (i < this.jsonValue.length() - 1 && this.jsonValue.charAt(i) == 92 && this.jsonValue.charAt(i + 1) == 92) {
-                        stringbuilder.append('\\');
+                    if (i < this.jsonValue.length() - 1 && this.jsonValue.charAt(i) == '\\' && this.jsonValue.charAt(i + 1) == '\\') {
+                        stringBuilder.append('\\');
                         ++i;
                     } else {
-                        stringbuilder.append(this.jsonValue.charAt(i));
+                        stringBuilder.append(this.jsonValue.charAt(i));
                     }
                 }
 
-                return new StringTag(stringbuilder.toString());
+                return LinStringTag.of(stringBuilder.toString());
             }
         }
 
     }
 
-    private static class List extends JSON2NBT.Any {
+    private static class List extends Any {
 
-        protected java.util.List<JSON2NBT.Any> tagList = Lists.newArrayList();
+        protected java.util.List<Any> tagList = new ArrayList<>();
 
-        public List(String json) {
+        List(String json) {
             this.json = json;
         }
 
-        public Tag parse() throws NBTException {
-            ArrayList<Tag> list = new ArrayList<>();
+        @SuppressWarnings({"unchecked", "rawtypes"})
+        @Override
+        public LinListTag parse() throws NBTException {
+            java.util.List<LinTag<?>> list = new ArrayList<>();
 
-            for (Any JSON2NBT$any : this.tagList) {
-                list.add(JSON2NBT$any.parse());
+            for (Any any : this.tagList) {
+                list.add(any.parse());
             }
-            Class<? extends Tag> tagType = list.isEmpty() ? CompoundTag.class : list.get(0).getClass();
-            return new ListTag(tagType, list);
+            LinTagType tagType = list.isEmpty() ? LinTagType.compoundTag() : list.getFirst().type();
+            return LinListTag.of(tagType, list);
         }
 
     }
 
-    private static class Compound extends JSON2NBT.Any {
+    private static class Compound extends Any {
 
-        protected java.util.List<JSON2NBT.Any> tagList = Lists.newArrayList();
+        protected java.util.List<Any> tagList = new ArrayList<>();
 
-        public Compound(String jsonIn) {
+        Compound(String jsonIn) {
             this.json = jsonIn;
         }
 
-        public Tag parse() throws NBTException {
-            HashMap<String, Tag<?, ?>> map = new HashMap<>();
+        @Override
+        public LinCompoundTag parse() throws NBTException {
+            Map<String, LinTag<?>> map = new LinkedHashMap<>();
 
-            for (Any JSON2NBT$any : this.tagList) {
-                map.put(JSON2NBT$any.json, JSON2NBT$any.parse());
+            for (Any any : this.tagList) {
+                map.put(any.json, any.parse());
             }
 
-            return new CompoundTag(map);
+            return LinCompoundTag.of(map);
         }
 
     }
@@ -426,7 +443,7 @@ public class JSON2NBT {
         Any() {
         }
 
-        public abstract Tag parse() throws NBTException;
+        public abstract LinTag<?> parse() throws NBTException;
 
     }
 
